# pretix-migrate-from-xing-events

./: .gitlab-ci.yml.swp  .update-locales.sh  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_migrate_from_xing_events/: __init__.py  apps.py  signals.py  tasks.py  urls.py  views.py
pretix_migrate_from_xing_events/importer/: client.py  main.py
pretix_migrate_from_xing_events/locale/: django.pot
pretix_migrate_from_xing_events/management/commands/: import_from_xing_events.py
pretix_migrate_from_xing_events/templates/pretix_migrate_from_xing_events/: index.html  selection.html  status.html
