[project]
name = "pretix-migrate-from-xing-events"
dynamic = ["version"]
description = "Assists migrating from XING Events to pretix"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_migrate_from_xing_events = "pretix_migrate_from_xing_events:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-migrate-from-xing-events"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_migrate_from_xing_events.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
